# weekly_dl

./: README.md  default.nix  main.py  pyproject.toml
weekly_dl/: main.py
