[tool.poetry]
name = "weekly-dl"
version = "0.1.0"
description = ""
authors = ["Antoine Carnec <antoinecarnec@gmail.com>"]
readme = "README.md"
packages = [{include = "weekly_dl"}]

[tool.poetry.dependencies]
python = "^3.10"
spotipy = "^2.21.0"
spotdl = "^3.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
